browser/themes/shared/urlbar/view-nova.css
/* ... */
/* Actions */
.urlbarView-results[actionmode] {
  white-space: wrap;

  > .urlbarView-row {
    display: inline-flex;
  }
}

/* To align the label and action button */
.urlbarView-row[secondary-action] {
  flex-direction: column;
  align-items: flex-start;
}

.urlbarView-actions-container {
  margin-inline-start: calc(
    var(--urlbarView-row-padding-inline) + var(--urlbarView-favicon-margin-start) + var(--urlbarView-favicon-size) + var(--urlbarView-icon-margin-end)
  );
  margin-block-end: var(--urlbarView-row-padding-block);
}

.urlbarView-action-btn {
  font-size: smaller;
  font-weight: var(--font-weight-semibold);
  border-radius: var(--urlbar-border-radius);
  border: 1px solid transparent;
  padding: 0.4em 0.6em;
  display: inline-flex;
  align-items: center;
  background-color: var(--urlbarView-action-button-background-color);
  margin-inline-end: var(--space-large);

  > img {
    width: 16px;
    height: 16px;
    margin-inline-end: 0.4em;
    -moz-context-properties: fill, fill-opacity;
  }

  &:hover {
    background-color: var(--urlbarView-action-button-hover-background-color);
  }

  &[selected],
  &:hover:active {
    outline: var(--focus-outline);
  }

  &.urlbarView-userContext {
    border-top-color: var(--identity-tab-color);
  }

  .urlbarView[action-override] &[data-action="tabswitch"] {
    display: none;
  }

  &[data-action^="tabgroup-"] {
    color: var(--tab-group-text-color);
    background-color: var(--tab-group-background-color);
    max-width: 30%;

    /* Add offset to the focus / selection indicator as the outline color could
       be close to the group color. */
    outline-offset: 1px;
    margin-inline-start: 1px;

    &:hover {
      background-color: var(--tab-group-background-color-hover);
    }

    > .urlbarView-action-btn-label {
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

/* Suggest realtime opt-in */

.urlbarView-row[tip-type="realtime_opt_in"] {
  /* `margin-block-end` is large to give enough spacing between the opt-in and the
     row label in the next row. */
  margin-block: var(--urlbarView-row-padding-block) calc(5 * var(--urlbarView-row-padding-block));
  padding-block: 0;
  border-block: none;
  border-radius: var(--border-radius-medium);

  @media not (prefers-contrast) {
    background-color: color-mix(in srgb, var(--button-background-color) 30%, transparent);
  }

  > .urlbarView-row-inner {
    padding: 0;

    > .urlbarView-favicon {
      width: 98px;
      flex-basis: 98px;
      height: auto;
      align-self: stretch;

      margin-inline: 0;
      border-start-start-radius: var(--border-radius-medium);
      border-end-start-radius: var(--border-radius-medium);

      background-color: light-dark(#ddcfff, #4e2e9d);
      fill: none;

      @media (prefers-contrast) {
        background-color: currentColor;
        fill: currentColor;
      }
    }

    > .urlbarView-row-body {
      padding: var(--space-xlarge);

      > .urlbarView-row-body-top > .urlbarView-row-body-top-no-wrap > .urlbarView-title {
        font-weight: var(--font-weight-heading);
      }
    }
  }

  .urlbarView-results[wrap] > & {
    > .urlbarView-row-inner {
      padding: var(--space-large);

      > .urlbarView-favicon {
        border-radius: var(--border-radius-medium);
      }
    }

    > .urlbarView-row-buttons {
      /* Should match `padding-inline-end` of `.urlbarView-row-buttons` in tips. */
      padding-block-end: var(--space-large);
    }
  }
}

/* Basic style for Realtime suggestions */

.urlbarView-row[dynamicType^="realtime-"]:not([row-selectable]) {
  /* When a realtime row contains multiple items, each item is individually
     selectable rather than the row. Set borders on the items so that the gutter
     and selection styling applies to them and not the row. */
  border: none;
  > .urlbarView-realtime-root > .urlbarView-realtime-item {
    border: var(--urlbarView-row-border);
    border-radius: var(--urlbarView-row-border-radius);
    background-clip: var(--urlbarView-row-background-clip);
  }
}
/* ... */

